--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 <body>
   <div class="page">
     <header class="header">
-      <img class= "logo logo_place_header" src="images/logo_place_header.svg">
+      <img class= "logo logo_place_header" src="images/logo_place_header.svg" alt="YandexLogo">
       <h1 class="header__title">
         Научиться учиться
       </h1>
-      <p class="header__subtitle">
+      <div class="header__subtitle">
         Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
         <a class="header__link" href="#">
           Узнать⟶
         </a>
-      </p>
-      <img class="header__main-illustration" src="images/header-image.png">
+      </div>
+      <img class="header__main-illustration" src="images/header-image.png" alt="MainPic">
       <div class="header__square-pic"></div>
     </header>
     <main class="content">
@@ -43,17 +43,258 @@
         </div>
       </section>
 
-      <section class="digits">
+      <section class="digits flex-column-centered">
+        <h2 class="section-title flex-column-centered">
+          Цифры и факты
+        </h2>
+        <h3 class="section-subtitle flex-column-centered">
+          Про учёбу и мозг
+        </h3>
+        <div class="table">
+          <div class="table__cell">
+            <div class="table__heading">
+              86 миллиардов
+            </div>
+            <div class="table__text">
+              Число нейронов в мозге человека
+            </div>
+          </div>
+
+          <div class="table__cell">
+            <div class="table__heading">
+              2.1 миллиарда
+            </div>
+            <div class="table__text">
+              Число нуждающихся в повышении квалификации
+            </div>
+            <div class="table__text">
+              Всемирный Банк, 2017
+            </div>
+          </div>
+
+          <div class="table__cell">
+            <div class="table__heading">
+              1000 терабайт
+            </div>
+            <div class="table__text">
+              Объём памяти человека
+            </div>
+          </div>
+
+          <div class="table__cell">
+            <div class="table__heading">
+              500 триллионов
+            </div>
+            <div class="table__text">
+              Число ответственных за обучение нервных синапсов у взрослого человека
+            </div>
+          </div>
+
+          <div class="table__cell">
+            <div class="table__heading">
+              420 миллионов
+            </div>
+            <div class="table__text">
+              Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства
+            </div>
+            <div class="table__text">
+              Всемирный Банк, 2017
+            </div>
+          </div>
+
+          <div class="table__cell">
+            <div class="table__heading">
+              17–20 лет
+            </div>
+            <div class="table__text">
+              Пик обучаемости
+            </div>
+          </div>
+
+          <div class="table__cell">
+            <div class="table__heading">
+              1885 год
+            </div>
+            <div class="table__text">
+              Открытие кривой забывания
+            </div>
+          </div>
+
+          <div class="table__cell">
+            <div class="table__heading">
+              1889 год
+            </div>
+            <div class="table__text">
+              Открытие условного рефлекса
+            </div>
+          </div>
+        </div>
       </section>
 
       <section class="feynman">
+        <div class="delaem-krasivo__frame">
+          <h2 class="feynman__title flex-column-centered">
+            Метод Фейнмана
+          </h2>
+          <h3 class="feynman__subtitle flex-column-centered">
+            Выучить и не забыть.
+          </h3>
+          <a class="feynman__link" href="#">
+            Подробнее ⟶
+          </a>
+      </div>
       </section>
 
-      <section class="kaufman">
+      <section class="kaufman flex-column-centered">
+        <h2 class="section-title flex-column-centered section-title_theme_dark">
+          Принципы обучения
+        </h2>
+        <h3 class="section-subtitle flex-column-centered section-subtitle_theme_dark">
+          от Джоша Кауфмана
+        </h3>
+        <div class="table">
+          <div class="table__cell table__cell_theme_dark">
+            <div class="table__heading">
+              1
+            </div>
+            <div class="table__text">
+              Выберите привлекательный проект.
+            </div>
+          </div>
+
+          <div class="table__cell table__cell_theme_dark">
+            <div class="table__heading">
+              2
+            </div>
+            <div class="table__text">
+              Сосредоточьтесь на каком-то одном навыке.
+            </div>
+          </div>
+
+          <div class="table__cell table__cell_theme_dark">
+            <div class="table__heading">
+              3
+            </div>
+            <div class="table__text ">
+              Определите целевой уровень мастерства.
+            </div>
+          </div>
+
+          <div class="table__cell table__cell_theme_dark">
+            <div class="table__heading">
+              4
+            </div>
+            <div class="table__text ">
+              Разбейте навык на элементы.
+            </div>
+          </div>
+
+          <div class="table__cell table__cell_theme_dark">
+            <div class="table__heading">
+              5
+            </div>
+            <div class="table__text ">
+              Приготовьте всё необходимое для занятий.
+            </div>
+          </div>
+
+          <div class="table__cell table__cell_theme_dark">
+            <div class="table__heading">
+              6
+            </div>
+            <div class="table__text ">
+              Устраните препятствия для занятий.
+            </div>
+          </div>
+
+          <div class="table__cell table__cell_theme_dark">
+            <div class="table__heading">
+              7
+            </div>
+            <div class="table__text">
+              Выделите специальное время для занятий.
+            </div>
+          </div>
+
+          <div class="table__cell table__cell_theme_dark">
+            <div class="table__heading">
+              8
+            </div>
+            <div class="table__text">
+              Создайте быстрые петли обратной связи.
+            </div>
+          </div>
+
+          <div class="table__cell table__cell_theme_dark">
+            <div class="table__heading">
+              9
+            </div>
+            <div class="table__text">
+              Занимайтесь по расписанию, короткими интенсивными интервалами.
+            </div>
+          </div>
+
+          <div class="table__cell table__cell_theme_dark">
+            <div class="table__heading">
+              10
+            </div>
+            <div class="table__text">
+              Уделяйте внимание количеству и скорости.
+            </div>
+          </div>
+        </div>
+        <img class="kaufman__triangle" src="./images/kaufman-triangle.svg" alt="Triangle">
       </section>
     </main>
-    <footer class="footer">
 
+    <footer class="footer flex-column-centered">
+      <div class="footer__columns">
+        <div class="footer__columns_content_copyright">
+          <img class= "logo" src="images/logo_place_footer.svg" alt="YandexLogo">
+          <div class="footer__author">
+            &copy; 2019. Виктор Абанькин
+          </div>
+        </div>
+        <div class="footer__columns_content_info">
+          <div class="column__header">
+            О Практикуме
+          </div>
+          <ul class="column__links">
+            <li>
+              <a class="column__link" href="#">Главная</a>
+            </li>
+            <li>
+              <a class="column__link" href="#">Концепция</a>
+            </li>
+            <li>
+              <a class="column__link" href="#">Наставники</a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer__columns_content_social">
+          <div class="column__header">
+            Соцсети
+          </div>
+          <ul class="column__links">
+            <li>
+              <a class="column__link" href="#">
+                <img class="social-icon" src="./images/facebook_color_white.svg" alt="FacebookIcon">Facebook
+              </a>
+            </li>
+            <li>
+              <a class="column__link" href="#">
+                <img class="social-icon" src="./images/vk_color_white.svg" alt="VKIcon">ВКонтакте
+              </a>
+            </li>
+            <li>
+              <a class="column__link" href="#">
+              <img class="social-icon" src="./images/instagram_color_white.svg" alt="InstargamIcon">Instagram
+              </a>
+            </li>
+          </ul>
+        </div>
+
+      </div>
     </footer>
   </div>
 </body>
