--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 <body>
   <div class="page">
     <header class="header">
-      <img class= "logo logo_place_header" src="images/logo_place_header.svg" alt="YandexLogo">
+      <img class= "logo logo_place_header" src="images/logo_place_header.svg" alt="Логотип Яндекса">
       <h1 class="header__title">
         Научиться учиться
       </h1>
-      <div class="header__subtitle">
+      <p class="header__subtitle">
         Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
         <a class="header__link" href="#">
           Узнать⟶
         </a>
-      </div>
-      <img class="header__main-illustration" src="images/header-image.png" alt="MainPic">
+      </p>
+      <img class="header__main-illustration" src="images/header-image.png" alt="Опять двойка, фрагмент">
       <div class="header__square-pic"></div>
     </header>
     <main class="content">
@@ -33,7 +33,7 @@
             <p class="two-columns__paragraph">
               Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.
             </p>
-            <p class="two-columns__paragraph mmk">
+            <p class="two-columns__paragraph">
               <span class="two-columns__span-accent">Вывод: </span>учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
             </p>
             <p class="two-columns__paragraph">
@@ -44,255 +44,253 @@
       </section>
 
       <section class="digits flex-column-centered">
-        <h2 class="section-title flex-column-centered">
+        <h2 class="section-title">
           Цифры и факты
         </h2>
-        <h3 class="section-subtitle flex-column-centered">
+        <p class="section-subtitle">
           Про учёбу и мозг
-        </h3>
+        </p>
         <div class="table">
           <div class="table__cell">
-            <div class="table__heading">
+            <h3 class="table__heading">
               86 миллиардов
-            </div>
-            <div class="table__text">
+            </h3>
+            <p class="table__text">
               Число нейронов в мозге человека
-            </div>
+            </p>
           </div>
 
           <div class="table__cell">
-            <div class="table__heading">
+            <h3 class="table__heading">
               2.1 миллиарда
-            </div>
-            <div class="table__text">
+            </h3>
+            <p class="table__text">
               Число нуждающихся в повышении квалификации
-            </div>
-            <div class="table__text">
+            </p>
+            <p class="table__text">
               Всемирный Банк, 2017
-            </div>
+            </p>
           </div>
 
           <div class="table__cell">
-            <div class="table__heading">
+            <h3 class="table__heading">
               1000 терабайт
-            </div>
-            <div class="table__text">
+            </h3>
+            <p class="table__text">
               Объём памяти человека
-            </div>
+            </p>
           </div>
 
           <div class="table__cell">
-            <div class="table__heading">
+            <h3 class="table__heading">
               500 триллионов
-            </div>
-            <div class="table__text">
+            </h3>
+            <p class="table__text">
               Число ответственных за обучение нервных синапсов у взрослого человека
-            </div>
+            </p>
           </div>
 
           <div class="table__cell">
-            <div class="table__heading">
+            <h3 class="table__heading">
               420 миллионов
-            </div>
-            <div class="table__text">
+            </h3>
+            <p class="table__text">
               Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства
-            </div>
-            <div class="table__text">
+            </p>
+            <p class="table__text">
               Всемирный Банк, 2017
-            </div>
+            </p>
           </div>
 
           <div class="table__cell">
-            <div class="table__heading">
+            <h3 class="table__heading">
               17–20 лет
-            </div>
-            <div class="table__text">
+            </h3>
+            <p class="table__text">
               Пик обучаемости
-            </div>
+            </p>
           </div>
 
           <div class="table__cell">
-            <div class="table__heading">
+            <h3 class="table__heading">
               1885 год
-            </div>
-            <div class="table__text">
+            </h3>
+            <p class="table__text">
               Открытие кривой забывания
-            </div>
+            </p>
           </div>
 
           <div class="table__cell">
-            <div class="table__heading">
+            <h3 class="table__heading">
               1889 год
-            </div>
-            <div class="table__text">
+            </h3>
+            <p class="table__text">
               Открытие условного рефлекса
-            </div>
+            </p>
           </div>
         </div>
       </section>
 
       <section class="feynman">
-        <div class="delaem-krasivo__frame">
-          <h2 class="feynman__title flex-column-centered">
+          <h2 class="feynman__title">
             Метод Фейнмана
           </h2>
-          <h3 class="feynman__subtitle flex-column-centered">
+          <p class="feynman__subtitle">
             Выучить и не забыть.
-          </h3>
+          </p>
           <a class="feynman__link" href="#">
             Подробнее ⟶
           </a>
-      </div>
       </section>
 
       <section class="kaufman flex-column-centered">
-        <h2 class="section-title flex-column-centered section-title_theme_dark">
+        <h2 class="section-title section-title_theme_dark">
           Принципы обучения
         </h2>
-        <h3 class="section-subtitle flex-column-centered section-subtitle_theme_dark">
+        <p class="section-subtitle section-subtitle_theme_dark">
           от Джоша Кауфмана
-        </h3>
+        </p>
         <div class="table">
           <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading">
+            <h3 class="table__heading">
               1
-            </div>
-            <div class="table__text">
+            </h3>
+            <p class="table__text">
               Выберите привлекательный проект.
-            </div>
+            </p>
           </div>
 
           <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading">
+            <h3 class="table__heading">
               2
-            </div>
-            <div class="table__text">
+            </h3>
+            <p class="table__text">
               Сосредоточьтесь на каком-то одном навыке.
-            </div>
+            </p>
           </div>
 
           <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading">
+            <h3 class="table__heading">
               3
-            </div>
-            <div class="table__text ">
+            </h3>
+            <p class="table__text ">
               Определите целевой уровень мастерства.
-            </div>
+            </p>
           </div>
 
           <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading">
+            <h3 class="table__heading">
               4
-            </div>
-            <div class="table__text ">
+            </h3>
+            <p class="table__text ">
               Разбейте навык на элементы.
-            </div>
+            </p>
           </div>
 
           <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading">
+            <h3 class="table__heading">
               5
-            </div>
-            <div class="table__text ">
+            </h3>
+            <p class="table__text ">
               Приготовьте всё необходимое для занятий.
-            </div>
+            </p>
           </div>
 
           <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading">
+            <h3 class="table__heading">
               6
-            </div>
-            <div class="table__text ">
+            </h3>
+            <p class="table__text ">
               Устраните препятствия для занятий.
-            </div>
+            </p>
           </div>
 
           <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading">
+            <h3 class="table__heading">
               7
-            </div>
-            <div class="table__text">
+            </h3>
+            <p class="table__text">
               Выделите специальное время для занятий.
-            </div>
+            </p>
           </div>
 
           <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading">
+            <h3 class="table__heading">
               8
-            </div>
-            <div class="table__text">
+            </h3>
+            <p class="table__text">
               Создайте быстрые петли обратной связи.
-            </div>
+            </p>
           </div>
 
           <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading">
+            <h3 class="table__heading">
               9
-            </div>
-            <div class="table__text">
+            </h3>
+            <p class="table__text">
               Занимайтесь по расписанию, короткими интенсивными интервалами.
-            </div>
+            </p>
           </div>
 
           <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading">
+            <h3 class="table__heading">
               10
-            </div>
-            <div class="table__text">
+            </h3>
+            <p class="table__text">
               Уделяйте внимание количеству и скорости.
-            </div>
+            </p>
           </div>
         </div>
-        <img class="kaufman__triangle" src="./images/kaufman-triangle.svg" alt="Triangle">
+        <div class="kaufman__triangle"></div>
       </section>
     </main>
 
     <footer class="footer flex-column-centered">
       <div class="footer__columns">
-        <div class="footer__columns_content_copyright">
-          <img class= "logo" src="images/logo_place_footer.svg" alt="YandexLogo">
+        <div class="footer__column footer__column_content_copyright">
+          <img class= "logo logo_place_footer" src="images/logo_place_footer.svg" alt="Логотип Яндекса">
           <div class="footer__author">
             &copy; 2019. Виктор Абанькин
           </div>
         </div>
-        <div class="footer__columns_content_info">
-          <div class="column__header">
+        <nav class="footer__column footer__column_content_info">
+          <h3 class="footer__column-heading">
             О Практикуме
-          </div>
-          <ul class="column__links">
+          </h3>
+          <ul class="footer__column-links">
             <li>
-              <a class="column__link" href="#">Главная</a>
+              <a class="footer__column-link" href="#">Главная</a>
             </li>
             <li>
-              <a class="column__link" href="#">Концепция</a>
+              <a class="footer__column-link" href="#">Концепция</a>
             </li>
             <li>
-              <a class="column__link" href="#">Наставники</a>
+              <a class="footer__column-link" href="#">Наставники</a>
             </li>
           </ul>
-        </div>
-        <div class="footer__columns_content_social">
-          <div class="column__header">
+        </nav>
+        <nav class="footer__column footer__column_content_social">
+          <h3 class="footer__column-heading">
             Соцсети
-          </div>
-          <ul class="column__links">
+          </h3>
+          <ul class="footer__column-links">
             <li>
-              <a class="column__link" href="#">
-                <img class="social-icon" src="./images/facebook_color_white.svg" alt="FacebookIcon">Facebook
+              <a class="footer__column-link" href="#">
+                <img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Значок Фейсбука">Facebook
               </a>
             </li>
             <li>
-              <a class="column__link" href="#">
-                <img class="social-icon" src="./images/vk_color_white.svg" alt="VKIcon">ВКонтакте
+              <a class="footer__column-link" href="#">
+                <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Значок Вконтакте">ВКонтакте
               </a>
             </li>
             <li>
-              <a class="column__link" href="#">
-              <img class="social-icon" src="./images/instagram_color_white.svg" alt="InstargamIcon">Instagram
+              <a class="footer__column-link" href="#">
+              <img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Значок Интаграма">Instagram
               </a>
             </li>
           </ul>
-        </div>
+        </nav>
 
       </div>
     </footer>
