--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles/normalize.css">
-  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="./blocks/vendor/normalize.css">
+  <link rel="stylesheet" href="./pages/index.css">
   <title>Научиться учиться</title>
 </head>
 <body>
@@ -51,7 +51,7 @@
           Про учёбу и мозг
         </p>
         <div class="table">
-          <div class="table__cell">
+          <div class="table__cell table__cell_theme_light">
             <h3 class="reset-style table__heading">
               86 миллиардов
             </h3>
@@ -60,7 +60,7 @@
             </p>
           </div>
 
-          <div class="table__cell">
+          <div class="table__cell table__cell_theme_light">
             <h3 class="reset-style table__heading">
               2.1 миллиарда
             </h3>
@@ -72,7 +72,7 @@
             </p>
           </div>
 
-          <div class="table__cell">
+          <div class="table__cell table__cell_theme_light">
             <h3 class="reset-style table__heading">
               1000 терабайт
             </h3>
@@ -81,7 +81,7 @@
             </p>
           </div>
 
-          <div class="table__cell">
+          <div class="table__cell table__cell_theme_light">
             <h3 class="reset-style table__heading">
               500 триллионов
             </h3>
@@ -90,7 +90,7 @@
             </p>
           </div>
 
-          <div class="table__cell">
+          <div class="table__cell table__cell_theme_light">
             <h3 class="reset-style table__heading">
               420 миллионов
             </h3>
@@ -102,7 +102,7 @@
             </p>
           </div>
 
-          <div class="table__cell">
+          <div class="table__cell table__cell_theme_light">
             <h3 class="reset-style table__heading">
               17–20 лет
             </h3>
@@ -111,7 +111,7 @@
             </p>
           </div>
 
-          <div class="table__cell">
+          <div class="table__cell table__cell_theme_light">
             <h3 class="reset-style table__heading">
               1885 год
             </h3>
@@ -120,7 +120,7 @@
             </p>
           </div>
 
-          <div class="table__cell">
+          <div class="table__cell table__cell_theme_light">
             <h3 class="reset-style table__heading">
               1889 год
             </h3>
