--- a/index.html
+++ b/index.html
@@ -42,6 +42,86 @@
           </div>
         </div>
       </section>
+      <section class="techniques flex-column-centered">
+        <h2 class="reset-style section-title">
+          Техники обучения
+        </h2>
+        <h3 class="reset-style section-subtitle">
+          Пять практик от Барбары Оакли
+        </h3>
+        <ul class="reset-style cards">
+          <li class="cards__item">
+            <img class="cards__image" src="images/cards-attention.png">
+            <h4 class="cards__title">
+              Два вида внимания
+            </h4>
+            <p class="cards__description">
+              Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.
+            </p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="images/cards-recall.png">
+            <h4 class="cards__title">
+              Recall
+            </h4>
+            <p class="cards__description">
+              Вспоминайте изученное — это позволит соединить разрозненные порции памяти.
+            </p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="images/cards-interliving.png">
+            <h4 class="cards__title">
+              Интерливинг
+            </h4>
+            <p class="cards__description">
+              Изучайте несколько навыков одновременно, они обогащают друг друга.
+            </p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="images/cards-question.png">
+            <h4 class="cards__title">
+              Вопросы
+            </h4>
+            <p class="cards__description">
+              Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.
+            </p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="images/cards-competence.png">
+            <h4 class="cards__title">
+              Иллюзия компетентности
+            </h4>
+            <p class="cards__description">
+              Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section class="video flex-column-centered">
+        <h2 class="section-title">
+          Видео нa TED
+        </h2>
+        <h3 class="section-subtitle">
+          Для тех, кто любит прокрастинировать
+        </h3>
+        <div class="video__iframes">
+          <iframe class="video__iframe" id="ytplayer" type="text/html" src="https://www.youtube.com/embed/5MgBikgcWnY"
+frameborder="0" allowfullscreen></iframe>
+          <iframe class="video__iframe" id="ytplayer" type="text/html" src="https://www.youtube.com/embed/arj7oStGLkU"
+frameborder="0" allowfullscreen></iframe>
+        </div>
+      </section>
+      <section class="feynman">
+        <h2 class="reset-style feynman__title">
+          Метод Фейнмана
+        </h2>
+        <p class="reset-style feynman__subtitle">
+          Выучить и не забыть.
+        </p>
+        <a class="feynman__link" href="#">
+          Подробнее ⟶
+        </a>
+      </section>
 
       <section class="digits flex-column-centered">
         <h2 class="reset-style section-title">
@@ -129,18 +209,6 @@
             </p>
           </div>
         </div>
-      </section>
-
-      <section class="feynman">
-          <h2 class="reset-style feynman__title">
-            Метод Фейнмана
-          </h2>
-          <p class="reset-style feynman__subtitle">
-            Выучить и не забыть.
-          </p>
-          <a class="feynman__link" href="#">
-            Подробнее ⟶
-          </a>
       </section>
 
       <section class="kaufman flex-column-centered">
