--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
           </div>
         </div>
       </section>
+
       <section class="techniques flex-column-centered">
         <h2 class="reset-style section-title">
           Техники обучения
@@ -51,7 +52,7 @@
         </h3>
         <ul class="reset-style cards">
           <li class="cards__item">
-            <img class="cards__image" src="images/cards-attention.png">
+            <img class="cards__image" src="images/cards-attention.png" alt="Книга">
             <h4 class="cards__title">
               Два вида внимания
             </h4>
@@ -60,7 +61,7 @@
             </p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="images/cards-recall.png">
+            <img class="cards__image" src="images/cards-recall.png" alt="Статуя">
             <h4 class="cards__title">
               Recall
             </h4>
@@ -69,7 +70,7 @@
             </p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="images/cards-interliving.png">
+            <img class="cards__image" src="images/cards-interliving.png" alt="Мемориал">
             <h4 class="cards__title">
               Интерливинг
             </h4>
@@ -78,7 +79,7 @@
             </p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="images/cards-question.png">
+            <img class="cards__image" src="images/cards-question.png" alt="Белая комната">
             <h4 class="cards__title">
               Вопросы
             </h4>
@@ -87,7 +88,7 @@
             </p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="images/cards-competence.png">
+            <img class="cards__image" src="images/cards-competence.png" alt="Стопка книг">
             <h4 class="cards__title">
               Иллюзия компетентности
             </h4>
@@ -97,6 +98,7 @@
           </li>
         </ul>
       </section>
+
       <section class="video flex-column-centered">
         <h2 class="section-title">
           Видео нa TED
@@ -105,12 +107,26 @@
           Для тех, кто любит прокрастинировать
         </h3>
         <div class="video__iframes">
-          <iframe class="video__iframe" id="ytplayer" type="text/html" src="https://www.youtube.com/embed/5MgBikgcWnY"
-frameborder="0" allowfullscreen></iframe>
-          <iframe class="video__iframe" id="ytplayer" type="text/html" src="https://www.youtube.com/embed/arj7oStGLkU"
-frameborder="0" allowfullscreen></iframe>
+          <iframe class="video__iframe" id="ytplayer" src="https://www.youtube.com/embed/5MgBikgcWnY"
+frameborder="0" allowfullscreen>Первые 20 часов - как чему-нибудь научиться | Джош Кауфман | TEDxCSU</iframe>
+          <iframe class="video__iframe" id="ytplayer2" src="https://www.youtube.com/embed/arj7oStGLkU"
+frameborder="0" allowfullscreen>В сознании мастера прокрастинатора | Тим Урбан</iframe>
         </div>
       </section>
+
+      <section class="oakley">
+        <div class="two-columns">
+          <h2 class="two-columns__brief">
+            История Барбары Оакли.
+          </h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">
+              С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.
+            </p>
+          </div>
+        </div>
+      </section>
+
       <section class="feynman">
         <h2 class="reset-style feynman__title">
           Метод Фейнмана
@@ -207,6 +223,40 @@ frameborder="0" allowfullscreen></iframe>
             <p class="reset-style table__text">
               Открытие условного рефлекса
             </p>
+          </div>
+        </div>
+      </section>
+
+      <section class="khan">
+        <div class="khan__container">
+          <p class="khan__author">
+            Салман Хан
+          </p>
+          <h2 class="khan__title">
+            Весь мир — школа
+          </h2>
+          <p class="khan__quote">
+            Страсть и новаторство Сала Хана меняют
+             процесс обучения миллионов студентов
+              по всему миру. 
+              Книгу «Весь мир — школа» нужно 
+              прочитать всем, кто занимается 
+              образованием — так учащиеся повсюду
+               смогут получить навыки и знания, 
+               которые приносят успех в школе, 
+               карьере и жизни.
+          </p>
+          <p class="khan__quote-author">
+            Джордж Лукас
+          </p>
+          <p class="khan__quote-author-subline">
+            Кинорежиссер, продюсер
+          </p>
+          <div class="khan__book-container">
+            <img class="khan__book-pic" src="/images/khan-book.jpg" alt="обложка книги">
+            <a class="khan__buy-link" href="#">
+              Купить книгу &#129042;
+            </a>
           </div>
         </div>
       </section>
@@ -311,6 +361,38 @@ frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="kaufman__triangle"></div>
       </section>
+
+      <section class="resources flex-column-centered">
+        <h2 class="section-title">
+          Полезные ресурсы
+        </h2>
+        <h3 class="section-subtitle">
+          Больше материалов о техниках и лайфхаках обучения
+        </h3>
+        <ul class="resources__logo-zone">
+          <li class="resources__logo">
+            <a href="#">
+              <img src="/images/logo/resources-arzamas.svg" alt="логотип Арзамас">
+            </a>
+          </li>
+          <li class="resources__logo">
+            <a href="#">
+              <img src="/images/logo/resources-n1.svg" alt="логотип Н+1">
+            </a>
+          </li>
+          <li class="resources__logo">
+            <a href="#">
+              <img src="/images/logo/resources-strelka.svg" alt="логотип Стрелка">
+            </a>
+          </li>
+          <li class="resources__logo">
+            <a href="#">
+              <img src="/images/logo/resources-polka.svg" alt="логотип Полка">
+            </a>
+          </li>
+        </ul>
+      </section>
+
     </main>
 
     <footer class="footer flex-column-centered">
