--- a/index.html
+++ b/index.html
@@ -107,10 +107,8 @@
           Для тех, кто любит прокрастинировать
         </h3>
         <div class="video__iframes">
-          <iframe class="video__iframe" id="ytplayer" src="https://www.youtube.com/embed/5MgBikgcWnY"
-frameborder="0" allowfullscreen>Первые 20 часов - как чему-нибудь научиться | Джош Кауфман | TEDxCSU</iframe>
-          <iframe class="video__iframe" id="ytplayer2" src="https://www.youtube.com/embed/arj7oStGLkU"
-frameborder="0" allowfullscreen>В сознании мастера прокрастинатора | Тим Урбан</iframe>
+          <iframe class="video__iframe" id="ytplayer" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen>Первые 20 часов - как чему-нибудь научиться | Джош Кауфман | TEDxCSU</iframe>
+          <iframe class="video__iframe" id="ytplayer2" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen>В сознании мастера прокрастинатора | Тим Урбан</iframe>
         </div>
       </section>
 
