--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 <body>
   <div class="page">
     <header class="header">
-      <img class= "logo logo_place_header" src="images/logo_place_header.svg" alt="Логотип Яндекса">
-      <h1 class="reset-style header__title">
+      <img class= "logo logo_place_header" src="./images/logo_place_header.svg" alt="Логотип Яндекса">
+      <h1 class="header__title">
         Научиться учиться
       </h1>
-      <p class="reset-style header__subtitle">
+      <p class="header__subtitle">
         Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
         <a class="header__link" href="#">
           Узнать⟶
         </a>
       </p>
-      <img class="header__main-illustration" src="images/header-image.png" alt="Опять двойка, фрагмент">
-      <div class="header__square-pic"></div>
+      <img class="header__main-illustration" src="./images/header-image.png" alt="Опять двойка, фрагмент">
+      <div class="header__square-pic rotation"></div>
     </header>
     <main class="content">
       <section class="description">
@@ -43,16 +43,16 @@
         </div>
       </section>
 
-      <section class="techniques flex-column-centered">
-        <h2 class="reset-style section-title">
+      <section class="techniques">
+        <h2 class="section-title">
           Техники обучения
         </h2>
-        <h3 class="reset-style section-subtitle">
+        <h3 class="section-subtitle">
           Пять практик от Барбары Оакли
         </h3>
-        <ul class="reset-style cards">
+        <ul class="cards">
           <li class="cards__item">
-            <img class="cards__image" src="images/cards-attention.png" alt="Книга">
+            <img class="cards__image" src="./images/cards-attention.png" alt="Книга">
             <h4 class="cards__title">
               Два вида внимания
             </h4>
@@ -61,7 +61,7 @@
             </p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="images/cards-recall.png" alt="Статуя">
+            <img class="cards__image" src="./images/cards-recall.png" alt="Статуя">
             <h4 class="cards__title">
               Recall
             </h4>
@@ -70,7 +70,7 @@
             </p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="images/cards-interliving.png" alt="Мемориал">
+            <img class="cards__image" src="./images/cards-interliving.png" alt="Мемориал">
             <h4 class="cards__title">
               Интерливинг
             </h4>
@@ -79,7 +79,7 @@
             </p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="images/cards-question.png" alt="Белая комната">
+            <img class="cards__image" src="./images/cards-question.png" alt="Белая комната">
             <h4 class="cards__title">
               Вопросы
             </h4>
@@ -88,7 +88,7 @@
             </p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="images/cards-competence.png" alt="Стопка книг">
+            <img class="cards__image" src="./images/cards-competence.png" alt="Стопка книг">
             <h4 class="cards__title">
               Иллюзия компетентности
             </h4>
@@ -99,7 +99,7 @@
         </ul>
       </section>
 
-      <section class="video flex-column-centered">
+      <section class="video">
         <h2 class="section-title">
           Видео нa TED
         </h2>
@@ -128,10 +128,10 @@
       </section>
 
       <section class="feynman">
-        <h2 class="reset-style feynman__title">
+        <h2 class="feynman__title">
           Метод Фейнмана
         </h2>
-        <p class="reset-style feynman__subtitle">
+        <p class="feynman__subtitle">
           Выучить и не забыть.
         </p>
         <a class="feynman__link" href="#">
@@ -139,88 +139,88 @@
         </a>
       </section>
 
-      <section class="digits flex-column-centered">
-        <h2 class="reset-style section-title">
+      <section class="digits">
+        <h2 class="section-title">
           Цифры и факты
         </h2>
-        <p class="reset-style section-subtitle">
+        <p class="section-subtitle">
           Про учёбу и мозг
         </p>
         <div class="table">
           <div class="table__cell table__cell_theme_light">
-            <h3 class="reset-style table__heading">
+            <h3 class="table__heading">
               86 миллиардов
             </h3>
-            <p class="reset-style table__text">
+            <p class="table__text">
               Число нейронов в мозге человека
             </p>
           </div>
 
           <div class="table__cell table__cell_theme_light">
-            <h3 class="reset-style table__heading">
+            <h3 class="table__heading">
               2.1 миллиарда
             </h3>
-            <p class="reset-style table__text">
+            <p class="table__text">
               Число нуждающихся в повышении квалификации
             </p>
-            <p class="reset-style table__text">
+            <p class="able__text">
               Всемирный Банк, 2017
             </p>
           </div>
 
           <div class="table__cell table__cell_theme_light">
-            <h3 class="reset-style table__heading">
+            <h3 class="table__heading">
               1000 терабайт
             </h3>
-            <p class="reset-style table__text">
+            <p class="table__text">
               Объём памяти человека
             </p>
           </div>
 
           <div class="table__cell table__cell_theme_light">
-            <h3 class="reset-style table__heading">
+            <h3 class="table__heading">
               500 триллионов
             </h3>
-            <p class="reset-style table__text">
+            <p class="table__text">
               Число ответственных за обучение нервных синапсов у взрослого человека
             </p>
           </div>
 
           <div class="table__cell table__cell_theme_light">
-            <h3 class="reset-style table__heading">
+            <h3 class="table__heading">
               420 миллионов
             </h3>
-            <p class="reset-style table__text">
+            <p class="table__text">
               Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства
             </p>
-            <p class="reset-style table__text">
+            <p class="table__text">
               Всемирный Банк, 2017
             </p>
           </div>
 
           <div class="table__cell table__cell_theme_light">
-            <h3 class="reset-style table__heading">
+            <h3 class="table__heading">
               17–20 лет
             </h3>
-            <p class="reset-style table__text">
+            <p class="table__text">
               Пик обучаемости
             </p>
           </div>
 
           <div class="table__cell table__cell_theme_light">
-            <h3 class="reset-style table__heading">
+            <h3 class="table__heading">
               1885 год
             </h3>
-            <p class="reset-style table__text">
+            <p class="table__text">
               Открытие кривой забывания
             </p>
           </div>
 
           <div class="table__cell table__cell_theme_light">
-            <h3 class="reset-style table__heading">
+            <h3 class="table__heading">
               1889 год
             </h3>
-            <p class="reset-style table__text">
+            <p class="table__text">
               Открытие условного рефлекса
             </p>
           </div>
@@ -253,7 +253,7 @@
             Кинорежиссер, продюсер
           </p>
           <div class="khan__book-container">
-            <img class="khan__book-pic" src="/images/khan-book.jpg" alt="обложка книги">
+            <img class="khan__book-pic" src="./images/khan-book.jpg" alt="обложка книги">
             <a class="khan__buy-link" href="#">
               Купить книгу &#129042;
             </a>
@@ -261,108 +261,108 @@
         </div>
       </section>
 
-      <section class="kaufman flex-column-centered">
-        <h2 class="reset-style section-title section-title_theme_dark">
+      <section class="kaufman">
+        <h2 class="section-title section-title_theme_dark">
           Принципы обучения
         </h2>
-        <p class="reset-style section-subtitle section-subtitle_theme_dark">
+        <p class="section-subtitle section-subtitle_theme_dark">
           от Джоша Кауфмана
         </p>
         <div class="table">
           <div class="table__cell table__cell_theme_dark">
-            <h3 class="reset-style table__heading">
+            <h3 class="table__heading">
               1
             </h3>
-            <p class="reset-style table__text">
+            <p class="table__text">
               Выберите привлекательный проект.
             </p>
           </div>
 
           <div class="table__cell table__cell_theme_dark">
-            <h3 class="reset-style table__heading">
+            <h3 class="table__heading">
               2
             </h3>
-            <p class="reset-style table__text">
+            <p class="table__text">
               Сосредоточьтесь на каком-то одном навыке.
             </p>
           </div>
 
           <div class="table__cell table__cell_theme_dark">
-            <h3 class="reset-style table__heading">
+            <h3 class="table__heading">
               3
             </h3>
-            <p class="reset-style table__text">
+            <p class="table__text">
               Определите целевой уровень мастерства.
             </p>
           </div>
 
           <div class="table__cell table__cell_theme_dark">
-            <h3 class="reset-style table__heading">
+            <h3 class="table__heading">
               4
             </h3>
-            <p class="reset-style table__text ">
+            <p class="table__text ">
               Разбейте навык на элементы.
             </p>
           </div>
 
           <div class="table__cell table__cell_theme_dark">
-            <h3 class="reset-style table__heading">
+            <h3 class="table__heading">
               5
             </h3>
-            <p class="reset-style table__text ">
+            <p class="table__text ">
               Приготовьте всё необходимое для занятий.
             </p>
           </div>
 
           <div class="table__cell table__cell_theme_dark">
-            <h3 class="reset-style table__heading">
+            <h3 class="table__heading">
               6
             </h3>
-            <p class="reset-style table__text ">
+            <p class="table__text ">
               Устраните препятствия для занятий.
             </p>
           </div>
 
           <div class="table__cell table__cell_theme_dark">
-            <h3 class="reset-style table__heading">
+            <h3 class="table__heading">
               7
             </h3>
-            <p class="reset-style table__text">
+            <p class="table__text">
               Выделите специальное время для занятий.
             </p>
           </div>
 
           <div class="table__cell table__cell_theme_dark">
-            <h3 class="reset-style table__heading">
+            <h3 class="table__heading">
               8
             </h3>
-            <p class="reset-style table__text">
+            <p class="table__text">
               Создайте быстрые петли обратной связи.
             </p>
           </div>
 
           <div class="table__cell table__cell_theme_dark">
-            <h3 class="reset-style table__heading">
+            <h3 class="table__heading">
               9
             </h3>
-            <p class="reset-style table__text">
+            <p class="table__text">
               Занимайтесь по расписанию, короткими интенсивными интервалами.
             </p>
           </div>
 
           <div class="table__cell table__cell_theme_dark">
-            <h3 class="reset-style table__heading">
+            <h3 class="table__heading">
               10
             </h3>
-            <p class="reset-style table__text">
+            <p class="table__text">
               Уделяйте внимание количеству и скорости.
             </p>
           </div>
         </div>
-        <div class="kaufman__triangle"></div>
+        <div class="kaufman__triangle rotation"></div>
       </section>
 
-      <section class="resources flex-column-centered">
+      <section class="resources">
         <h2 class="section-title">
           Полезные ресурсы
         </h2>
@@ -372,22 +372,22 @@
         <ul class="resources__logo-zone">
           <li class="resources__logo">
             <a href="#">
-              <img src="/images/logo/resources-arzamas.svg" alt="логотип Арзамас">
+              <img src="./images/logo/resources-arzamas.svg" alt="логотип Арзамас">
             </a>
           </li>
           <li class="resources__logo">
             <a href="#">
-              <img src="/images/logo/resources-n1.svg" alt="логотип Н+1">
+              <img src="./images/logo/resources-n1.svg" alt="логотип Н+1">
             </a>
           </li>
           <li class="resources__logo">
             <a href="#">
-              <img src="/images/logo/resources-strelka.svg" alt="логотип Стрелка">
+              <img src="./images/logo/resources-strelka.svg" alt="логотип Стрелка">
             </a>
           </li>
           <li class="resources__logo">
             <a href="#">
-              <img src="/images/logo/resources-polka.svg" alt="логотип Полка">
+              <img src="./images/logo/resources-polka.svg" alt="логотип Полка">
             </a>
           </li>
         </ul>
@@ -395,19 +395,19 @@
 
     </main>
 
-    <footer class="footer flex-column-centered">
+    <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
-          <img class= "logo logo_place_footer" src="images/logo_place_footer.svg" alt="Логотип Яндекса">
-          <p class="reset-style footer__author">
+          <img class= "logo logo_place_footer" src="./images/logo_place_footer.svg" alt="Логотип Яндекса">
+          <p class="footer__author">
             &copy; 2019. Виктор Абанькин
           </p>
         </div>
         <nav class="footer__column footer__column_content_info">
-          <h3 class="reset-style footer__column-heading">
+          <h3 class="footer__column-heading">
             О Практикуме
           </h3>
-          <ul class="reset-style footer__column-links">
+          <ul class="footer__column-links">
             <li>
               <a class="footer__column-link" href="#">Главная</a>
             </li>
@@ -420,10 +420,10 @@
           </ul>
         </nav>
         <nav class="footer__column footer__column_content_social">
-          <h3 class="reset-style footer__column-heading">
+          <h3 class="footer__column-heading">
             Соцсети
           </h3>
-          <ul class="reset-style footer__column-links">
+          <ul class="footer__column-links">
             <li>
               <a class="footer__column-link" href="#">
                 <img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Значок Фейсбука">Facebook
