--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             <p class="table__text">
               Число нуждающихся в повышении квалификации
             </p>
-            <p class="able__text">
+            <p class="table__text">
               Всемирный Банк, 2017
             </p>
           </div>
