--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <p class="header__subtitle">
         Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
         <a class="header__link" href="#">
-          Узнать&#129042;
+          Узнать&#10230;
         </a>
       </p>
       <img class="header__main-illustration" src="./images/header-image.png" alt="Опять двойка, фрагмент">
@@ -134,7 +134,7 @@
           Выучить и не забыть.
         </p>
         <a class="feynman__link" href="#">
-          Подробнее ⟶
+          Подробнее &#10230;
         </a>
       </section>
 
@@ -254,7 +254,7 @@
           <div class="khan__book-container">
             <img class="khan__book-pic" src="./images/khan-book.jpg" alt="обложка книги">
             <a class="khan__buy-link" href="#">
-              Купить книгу &#129042;
+              Купить книгу &#10230;
             </a>
           </div>
         </div>
